--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.0.18
   json_annotation: ^4.4.0
   connectivity_plus: ^3.0.3
+  in_app_review: ^2.0.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
