--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   json_annotation: ^4.4.0
   connectivity_plus: ^3.0.3
   in_app_review: ^2.0.6
+  flutter_email_sender: ^5.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
