--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ dependencies:
   firebase_remote_config: ^3.0.6
   firebase_analytics: ^10.0.7
 
-  google_mobile_ads: ^2.3.0
   in_app_purchase: ^3.0.8
   rxdart: ^0.27.1
   path_provider: ^2.0.11
@@ -26,6 +25,7 @@ dependencies:
   connectivity_plus: ^3.0.3
   in_app_review: ^2.0.6
   flutter_email_sender: ^5.2.0
+  easy_ads_flutter: ^2.3.1 
 
 dev_dependencies:
   flutter_lints: ^2.0.0
