--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   in_app_review: ^2.0.6
   flutter_email_sender: ^5.2.0
   easy_ads_flutter: ^2.3.1 
+  package_info_plus: ^3.0.3
+  device_info_plus: ^7.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
