--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_crashlytics: ^3.0.6
   firebase_remote_config: ^3.0.6
   firebase_analytics: ^10.0.7
+  cloud_firestore: ^4.5.0
 
   in_app_purchase: ^3.0.8
   rxdart: ^0.27.1
