--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
 dev_dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.2.0
-  build_runner: ^2.1.11
-
+  build_runner: ^2.4.6
+  analyzer: ^4.7.0
 
 
 # For information on the generic Dart part of this file, see the
