--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "git.ignoreLimitWarning": true,
-    "dart.flutterSdkPath": "/Users/admin/Documents/3.7.6",
+    "dart.flutterSdkPath": "/Users/dennish/Documents/flutter_3.13.6"
 }
