--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   number_display: ^3.0.0
   package_info: ^2.0.2
   auto_size_text: ^3.0.0
+  lit_relative_date_time: ^1.2.0
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
