--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   package_info: ^2.0.2
   auto_size_text: ^3.0.0
   lit_relative_date_time: ^1.2.0
+  tuple: ^2.0.2
 
 
 dev_dependencies:
