--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -17,6 +17,7 @@ dependencies:
   firebase_analytics: ^10.5.0
   cloud_firestore: ^4.12.2
   firebase_auth: ^4.12.1
+  firebase_storage: ^11.6.6
 
   in_app_purchase: ^3.1.11
   rxdart: ^0.27.7
@@ -35,12 +36,10 @@ dependencies:
   lit_relative_date_time: ^1.2.0
   tuple: ^2.0.2
 
-
 dev_dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.2.0
   build_runner: ^2.4.6
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
