--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,20 +4,19 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=3.1.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Firebase
-  firebase_core: ^2.16.0
-  firebase_crashlytics: ^3.3.6
-  firebase_analytics: ^10.5.0
-  cloud_firestore: ^4.12.2
-  firebase_auth: ^4.12.1
-  firebase_storage: ^11.6.9
+  firebase_core: ^3.1.1
+  firebase_crashlytics: ^4.0.2
+  firebase_analytics: ^11.1.0
+  cloud_firestore: ^5.0.2
+  firebase_auth: ^5.1.1
+  firebase_storage: ^12.1.0
 
   in_app_purchase: ^3.1.11
   rxdart: ^0.27.7
@@ -35,6 +34,7 @@ dependencies:
   auto_size_text: ^3.0.0
   lit_relative_date_time: ^1.2.0
   tuple: ^2.0.2
+  flutter_inapp_purchase: ^5.6.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
