--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   lit_relative_date_time: ^1.2.0
   tuple: ^2.0.2
   flutter_inapp_purchase: ^5.6.1
+  user_messaging_platform: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
